gcc/testsuite/rust/rustc/ui/impl-trait/fallback_inference_dg.rs
use std::marker::PhantomData;

fn weird() -> PhantomData<impl Sized> {
    PhantomData // { dg-error ".E0282." "" { target *-*-* } }
}

fn main() {}

